--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ center {
 	background-size: cover;
 	}
 	40%{
-		background-color: #e64056;
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(129, 230, 217,1)'/%3E%3Cpath d='M0 0h40v40h-40z' fill='rgba(49, 151, 149,1)'/%3E%3Cpath d='M-40 0h20l20 20l-20 20h-20l20-20zM0 0h20l20 20l-20 20h-20l20-20z' fill='rgba(178, 245, 234,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
