--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ center {
 	}
 	50%
 	{
-		background-color: #e66440;
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(60, 54, 107,1)'/%3E%3Cpath d='M5 20L20 0L0 0zM20 40L35 20L40 40z' fill='rgba(43, 108, 176,1)'/%3E%3Cpath d='M0 20L17 40L20 20L0 20M20 20L23 0L40 20L20 20z' fill='rgba(190, 227, 248,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
