--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ center {
 	background-size: cover;
 	}
 	60%{
-		background-color: #ed9f4c;
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(183, 148, 244,1)'/%3E%3Cpath d='M-10-1.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 38.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 27.5h60v5h-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M27.5-10v60h5v-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M8.5-10v60h3v-60z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
