--- a/css/main.css
+++ b/css/main.css
@@ -122,16 +122,18 @@ center {
 	}
 	50%
 	{
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(190, 227, 248,1)'/%3E%3Cpath d='M0 27.5a 7.5-7.5 0 0 0 7.5-7.5a 12.5-12.5 0 0 1 12.5-12.5a 12.5 12.5 0 0 1 12.5 12.5h-5a-7.5-7.5 0 0 0-7.5-7.5a-7.5 7.5 0 0 0-7.5 7.5a-12.5 12.5 0 0 1-12.5 12.5a-12.5-12.5 0 0 1-12.5-12.5h5a 7.5 7.5 0 0 0 7.5 7.5z' fill='rgba(49, 130, 206,1)'/%3E%3Cpath d='M0 8.5a 11.5 11.5 0 0 1 11.5 11.5a 8.5 8.5 0 0 0 8.5 8.5a 8.5-8.5 0 0 0 8.5-8.5a 11.5-11.5 0 0 1 11.5-11.5a 11.5 11.5 0 0 1 11.5 11.5a 8.5 8.5 0 0 0 8.5 8.5v3a-11.5-11.5 0 0 1-11.5-11.5a-8.5-8.5 0 0 0-8.5-8.5a-8.5 8.5 0 0 0-8.5 8.5a-11.5 11.5 0 0 1-11.5 11.5a-11.5-11.5 0 0 1-11.5-11.5a-8.5-8.5 0 0 0-8.5-8.5a-8.5 8.5 0 0 0-8.5 8.5h-3a 11.5-11.5 0 0 1 11.5-11.5z' fill='rgba(44, 82, 130,1)'/%3E%3Cpath d='M20 7.5a 12.5 12.5 0 0 1 12.5 12.5a 7.5 7.5 0 0 0 7.5 7.5v5a-12.5-12.5 0 0 1-12.5-12.5a-7.5-7.5 0 0 0-7.5-7.5zM-20 7.5a 12.5 12.5 0 0 1 12.5 12.5a 7.5 7.5 0 0 0 7.5 7.5v5a-12.5-12.5 0 0 1-12.5-12.5a-7.5-7.5 0 0 0-7.5-7.5z' fill='rgba(49, 130, 206,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+	background-attachment: fixed;
+	background-size: cover;
+	}
+	60%{
 		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(60, 54, 107,1)'/%3E%3Cpath d='M5 20L20 0L0 0zM20 40L35 20L40 40z' fill='rgba(43, 108, 176,1)'/%3E%3Cpath d='M0 20L17 40L20 20L0 20M20 20L23 0L40 20L20 20z' fill='rgba(190, 227, 248,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
-	60%{
-		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(183, 148, 244,1)'/%3E%3Cpath d='M-10-1.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 38.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 27.5h60v5h-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M27.5-10v60h5v-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M8.5-10v60h3v-60z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-		background-attachment: fixed;
-	background-size: cover;
-	}
 	70%{
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(183, 148, 244,1)'/%3E%3Cpath d='M-10-1.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 38.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 27.5h60v5h-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M27.5-10v60h5v-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M8.5-10v60h3v-60z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
+		
 		background-color: #f5ed87;
 		background-attachment: fixed;
 	background-size: cover;
