--- a/css/main.css
+++ b/css/main.css
@@ -133,13 +133,11 @@ center {
 	}
 	70%{
 		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(183, 148, 244,1)'/%3E%3Cpath d='M-10-1.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 38.5h60v3h-60z' fill='rgba(128, 90, 213,1)'/%3E%3Cpath d='M-10 27.5h60v5h-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M27.5-10v60h5v-60z' fill='rgba(67, 65, 144,1)'/%3E%3Cpath d='M8.5-10v60h3v-60z' fill='rgba(128, 90, 213,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
-		
-		background-color: #f5ed87;
 		background-attachment: fixed;
 	background-size: cover;
 	}
 	80%{
-		background-color: #f1f5bc;
+		background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='130' height='130' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(90)'%3E%3Crect width='100%25' height='100%25' fill='rgba(254, 215, 226,1)'/%3E%3Ccircle cx='40' cy='20' r='5' fill='rgba(151, 38, 109,1)'/%3E%3Ccircle cx='0' cy='20' r='5' fill='rgba(151, 38, 109,1)'/%3E%3Ccircle cx='20' cy='40' r='5' fill='rgba(151, 38, 109,1)'/%3E%3Ccircle cx='20' cy='0' r='5' fill='rgba(151, 38, 109,1)'/%3E%3Ccircle cx='30' cy='10' r='5' fill='rgba(237, 100, 166,1)'/%3E%3Ccircle cx='10' cy='30' r='5' fill='rgba(237, 100, 166,1)'/%3E%3Ccircle cx='30' cy='30' r='5' fill='rgba(237, 100, 166,1)'/%3E%3Ccircle cx='10' cy='10' r='5' fill='rgba(237, 100, 166,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
 		background-attachment: fixed;
 	background-size: cover;
 	}
